version 1.7.1 - svn revision 256
================================
* reduced verbosity of grib_list.
* made grib_list more robust (prints "NOT FOUND" when there is an error
  reading the value for a key).
* fix setup.py to reference zlib as "-lz", not "-lzlib" (issue 9).

version 1.7 - svn revision 251
==============================
* added is_missing grib message method (to check if the value associated
  with a key is set to the grib missing value constant).
* grib_api_version module variable contains version info for grib_api lib.
* added *_LIBDIR and *_INCDIR env vars to setup.py for more flexible
  specification of library and include dir locations.
* fix bugs in handling of scale factor for radius of the earth.
* some grids use the key "projectionCentreFlag",
  while some use "projectionCenterFlag". Account for 
  both possibilities (added to test_stere.py).
* missingvalue_int and missingvalue_float are now module variables
  (not instance variables).
* raise error if no keys are specified when creating index instance.

version 1.6.1 - svn revision 227
================================
* only print ensemble info in __repr__ (which is called when 'print grb' is
  done) when both both 'perturbationNumber' and 'typeOfEnsembleForecast' keys are
  present. Fixes error on 'print grb' for ERA-interim grib files.

version 1.6 - svn revision 223
==============================
* raise IOError when grib message number < 1 is accessed with message method
  (instead of segfaulting, which is rude).  Fixes issue 4.
* indexing open instance (iterator) with an integer key now is the same as
  calling the message method (grbs.message(2) == grbs[2]).
* slicing iterator now also works (grbs[::2] returns every other grib message
  in a list).
* added 'select' method to open instance for selecting grib messages based
  on key/value pairs.
* added 'index' class which can be used for fast subsettting of grib files 