@@ -86,7 +86,7 @@
   <tr>
     <td align="left" class="footer">
     Generated by Epydoc 3.0.1
-    on Mon Jul  5 19:47:04 2010
+    on Mon Jul  5 19:50:34 2010
     </td>
     <td align="right" class="footer">
       <a target="mainFrame" href="http://epydoc.sourceforge.net"
