@@ -259,7 +259,7 @@
         Whitaker</a>
       </p>
       <p><strong>Version:</strong>
-        1.7
+        1.7.1
       </p>
       <p><strong>Copyright:</strong>
         copyright 2010 by Jeffrey Whitaker.
@@ -324,7 +324,7 @@
     <td width="15%" align="right" valign="top" class="summary">
       <span class="summary-type">&nbsp;</span>
     </td><td class="summary">
-        <a name="__version__"></a><span class="summary-name">__version__</span> = <code title="'1.7'"><code class="variable-quote">'</code><code class="variable-string">1.7</code><code class="variable-quote">'</code></code>
+        <a name="__version__"></a><span class="summary-name">__version__</span> = <code title="'1.7.1'"><code class="variable-quote">'</code><code class="variable-string">1.7.1</code><code class="variable-quote">'</code></code>
     </td>
   </tr>
 <tr>
@@ -376,7 +376,7 @@
   <tr>
     <td align="left" class="footer">
     Generated by Epydoc 3.0.1
-    on Mon Jul  5 19:47:04 2010
+    on Mon Jul  5 19:50:34 2010
     </td>
     <td align="right" class="footer">
       <a target="mainFrame" href="http://epydoc.sourceforge.net"
