@@ -1,4 +1,4 @@
-/* Generated by Cython 0.12.1 on Mon Jul  5 19:39:13 2010 */
+/* Generated by Cython 0.12.1 on Mon Jul  5 19:49:17 2010 */
 
 #define PY_SSIZE_T_CLEAN
 #include "Python.h"
@@ -653,8 +653,8 @@ static char __pyx_k_61[] = "no keys specified for index";
 static char __pyx_k_62[] = ",";
 static char __pyx_k_63[] = "key not part of grib index";
 static char __pyx_k_64[] = "value must be float, int or string";
-static char __pyx_k_65[] = "\nIntroduction\n============\n\nPython module for reading and writing GRIB (editions 1 and 2) files.\nGRIB is the World Meterological Organization\nU{standard<http://www.wmo.ch/pages/prog/www/WMOCodes/GRIB.html>} \nfor distributing gridded data. \nThe module is a python interface to the\nU{GRIB API<http://www.ecmwf.int/products/data/software/grib_api.html>} C library\nfrom the European Centre for Medium-Range Weather Forecasts\n(U{ECMWF<http://www.ecmwf.int>}).\n\nRequired\n========\n\n- U{Python<http://python.org>} 2.5 or higher.  \n- U{numpy<http://sourceforge.net/project/showfiles.php?group_id=1369>}\n  N-dimensional array object for python. Version 1.2.1 or higher.\n- U{pyproj<http://code.google.com/p/pyproj/>} Python interface to \n  U{PROJ.4<http://trac.osgeo.org/proj>} library for cartographic transformations.\n- U{GRIB API<http://www.ecmwf.int/products/data/software/grib_api.html>} C library\n  for encoding and decoding GRIB messages (edition 1 and edition 2).\n  Version 1.8.0 or higher required.\n  To be fully functional, the GRIB API library requires\n  U{Jasper<http://www.ece.uvic.ca/~mdadams/jasper>} or \n  U{OpenJPEG<http://www.openjpeg.org>} for JPEG200 encoding,\n  and U{PNG<http://www.libpng.org/pub/png/libpng.html>} for PNG encoding.\n\nInstallation\n============\n\n - U{Download<http://code.google.com/p/pygrib/downloads/list>} the source code. \n - set the environment variables C{$GRIBAPI_DIR}, C{$JASPER_DIR}, C{$OPENJPEG_DIR},\n C{$PNG_DIR} and C{$ZLIB_DIR} so that the include files and libraries for\n GRIB API, Jasper, OpenJPEG, PNG and zlib will be found.  \n For example, the include files for \n jasper should be found in C{$JASPER_DIR/include} or\n C{$JASPER_DIR/include/jasper}, and the jasper\n library should be found in C{$JASPER_DIR/lib} or C{$JASPER_DIR/lib64}. If any of\n those environment variables are not set, then the default search paths will be used.  \n If the GRIB API library was compiled without JASPER, PNG or OpenJPEG support, then the \n corresponding environment variable need not be set. If the libraries and\n include files are installed in separate locations, the environment variables\n C{$GRIBAPI_INCDIR} and C{$GRIBAPI_LIBDIR} can be used to define the locations\n separately (same goes for C{JASPER}, C{OPENJPEG}, C{PNG} and C{ZLIB}).\n - Run 'python setup.py install', as root if necessary.\n - Run 'python test.py' to test your installation.\n\n\nExample usage\n=============\n\n - from the python interpreter prompt, import the package::\n    >>> import pygrib\n - open a GRIB file, create a grib message iterator::\n    >>> grbs = pygrib.open('sampledata/flux.grb')  \n - print an inventory of the file::\n    >>> for grb in grbs:\n    >>>     print grb \n    1:Precipitation rate:kg m**-2 s**-1 (avg):regular_gg:surface:level 0:fcst time 108-120:from 200402291200\n    2:Surface pressure:Pa (instant):regular_gg:surface:level 0:fcst time 120:from 200402291200\n    3:Maximum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n    4:Minimum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n - find the first grib message with a matching name::\n    >>> for grb in grbs:\n    >>>     if grb['name'] == 'Maximum temperature': break\n - extract the data values using the 'values' key (grb.keys() will return a\n   list of the available keys)::\n    # The data is returned as a numpy array, or if missing values or a bitmap\n    # are present, a numpy masked array.  Reduced lat/lon or gaussian grid\n    # data is automatically expanded to a regular grid.\n    >>> maxt = grb['values']\n    >>> print maxt.shape, maxt.min(), maxt.max()\n    (94, 192) 223.7 319.9\n - instead of treating the gribmessage instance as a dictionary to access\n   key/value pairs, you can access the keys as attributes::\n    >>> maxt = grb.values\n    >>> print maxt.shape, maxt.min(), maxt.max()\n    (94, 192) 223.7 319.9\n - get the latitudes and longitudes of the grid::\n    >>> lats, lons = grb.latlons()\n    >>> print lats.shape, lats.min(), lats.max(), lons.shape, lons.min(), lons.max()\n    (94, 192) -88.5419501373 88.5419501373  0.0 358.125\n - use L{open.select} to choose grib messages based upon specified key/value pairs::\n    >>> selected_grbs = grbs.select(level=2,typeOfLevel='heightAboveGround') # get all 2-m level fields\n    >>> for grb in selected_grbs: print grb\n    3:Maximum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n    4:Minimum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n - get the third grib message::\n    >>> grb = grbs.message(3)\n    >>> print grb\n    3:Maximum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n - indexing with integer key is the same as calling the message method::\n    >>> grb = grbs[2]\n    >>> print grb\n    2:Surface pressure:Pa (instant):regular_gg:surface:level 0:fcst time 120:from 200402291200\n - modify the values associated with existing keys (either via attribute or\n   dictionary access)::\n    >>> grb['forecast_time'] = 240\n    >>> grb.dataDate = 20100101\n - get the binary string associated with the coded message::\n    >>> msg = grb.tostring()\n - write the modified message to a new GRIB file::\n    >>> grbout = open('test.grb','wb')\n    >>> grbout.write(msg)\n    >>> grbout.close()\n    >>> grbs = pygrib.open('test.grb')\n    >>> grbs.next()\n    >>> print grb\n    1:Surface pressure:Pa (instant):regular_gg:surface:level 0:fcst time 240:from 201001011200\n\nDocumentation\n=============\n\n - see below for the full python API documentation.\n  \nChangelog\n=========\n\n - see U{Changelog<http://pygrib.googlecode.com/svn/trunk/Changelog>} file.\n\n@author: Jeffrey Whitaker.\n\n@contact: U{Jeff Whitaker<mailto:jeffrey.s.whitaker@noaa.gov>}\n\n@version: 1.7\n\n@copyright: copyright 2010 by Jeffrey Whitaker.\n\n@license: Permission to use, copy, modify, and distribute this software and its\ndocumentation for any purpose and without fee is hereby granted,\nprovided that the above copyright notice appear in all copies and that\nboth that copyright notice and this permission notice appear in\nsupporting documentation.\nTHE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,\nINCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO\nEVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, INDIRECT OR\nCONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF\nUSE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR\nOTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR\nPERFORMANCE OF THIS SOFTWARE.";
-static char __pyx_k_66[] = "1.7";
+static char __pyx_k_65[] = "\nIntroduction\n============\n\nPython module for reading and writing GRIB (editions 1 and 2) files.\nGRIB is the World Meterological Organization\nU{standard<http://www.wmo.ch/pages/prog/www/WMOCodes/GRIB.html>} \nfor distributing gridded data. \nThe module is a python interface to the\nU{GRIB API<http://www.ecmwf.int/products/data/software/grib_api.html>} C library\nfrom the European Centre for Medium-Range Weather Forecasts\n(U{ECMWF<http://www.ecmwf.int>}).\n\nRequired\n========\n\n- U{Python<http://python.org>} 2.5 or higher.  \n- U{numpy<http://sourceforge.net/project/showfiles.php?group_id=1369>}\n  N-dimensional array object for python. Version 1.2.1 or higher.\n- U{pyproj<http://code.google.com/p/pyproj/>} Python interface to \n  U{PROJ.4<http://trac.osgeo.org/proj>} library for cartographic transformations.\n- U{GRIB API<http://www.ecmwf.int/products/data/software/grib_api.html>} C library\n  for encoding and decoding GRIB messages (edition 1 and edition 2).\n  Version 1.8.0 or higher required.\n  To be fully functional, the GRIB API library requires\n  U{Jasper<http://www.ece.uvic.ca/~mdadams/jasper>} or \n  U{OpenJPEG<http://www.openjpeg.org>} for JPEG200 encoding,\n  and U{PNG<http://www.libpng.org/pub/png/libpng.html>} for PNG encoding.\n\nInstallation\n============\n\n - U{Download<http://code.google.com/p/pygrib/downloads/list>} the source code. \n - set the environment variables C{$GRIBAPI_DIR}, C{$JASPER_DIR}, C{$OPENJPEG_DIR},\n C{$PNG_DIR} and C{$ZLIB_DIR} so that the include files and libraries for\n GRIB API, Jasper, OpenJPEG, PNG and zlib will be found.  \n For example, the include files for \n jasper should be found in C{$JASPER_DIR/include} or\n C{$JASPER_DIR/include/jasper}, and the jasper\n library should be found in C{$JASPER_DIR/lib} or C{$JASPER_DIR/lib64}. If any of\n those environment variables are not set, then the default search paths will be used.  \n If the GRIB API library was compiled without JASPER, PNG or OpenJPEG support, then the \n corresponding environment variable need not be set. If the libraries and\n include files are installed in separate locations, the environment variables\n C{$GRIBAPI_INCDIR} and C{$GRIBAPI_LIBDIR} can be used to define the locations\n separately (same goes for C{JASPER}, C{OPENJPEG}, C{PNG} and C{ZLIB}).\n - Run 'python setup.py install', as root if necessary.\n - Run 'python test.py' to test your installation.\n\n\nExample usage\n=============\n\n - from the python interpreter prompt, import the package::\n    >>> import pygrib\n - open a GRIB file, create a grib message iterator::\n    >>> grbs = pygrib.open('sampledata/flux.grb')  \n - print an inventory of the file::\n    >>> for grb in grbs:\n    >>>     print grb \n    1:Precipitation rate:kg m**-2 s**-1 (avg):regular_gg:surface:level 0:fcst time 108-120:from 200402291200\n    2:Surface pressure:Pa (instant):regular_gg:surface:level 0:fcst time 120:from 200402291200\n    3:Maximum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n    4:Minimum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n - find the first grib message with a matching name::\n    >>> for grb in grbs:\n    >>>     if grb['name'] == 'Maximum temperature': break\n - extract the data values using the 'values' key (grb.keys() will return a\n   list of the available keys)::\n    # The data is returned as a numpy array, or if missing values or a bitmap\n    # are present, a numpy masked array.  Reduced lat/lon or gaussian grid\n    # data is automatically expanded to a regular grid.\n    >>> maxt = grb['values']\n    >>> print maxt.shape, maxt.min(), maxt.max()\n    (94, 192) 223.7 319.9\n - instead of treating the gribmessage instance as a dictionary to access\n   key/value pairs, you can access the keys as attributes::\n    >>> maxt = grb.values\n    >>> print maxt.shape, maxt.min(), maxt.max()\n    (94, 192) 223.7 319.9\n - get the latitudes and longitudes of the grid::\n    >>> lats, lons = grb.latlons()\n    >>> print lats.shape, lats.min(), lats.max(), lons.shape, lons.min(), lons.max()\n    (94, 192) -88.5419501373 88.5419501373  0.0 358.125\n - use L{open.select} to choose grib messages based upon specified key/value pairs::\n    >>> selected_grbs = grbs.select(level=2,typeOfLevel='heightAboveGround') # get all 2-m level fields\n    >>> for grb in selected_grbs: print grb\n    3:Maximum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n    4:Minimum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n - get the third grib message::\n    >>> grb = grbs.message(3)\n    >>> print grb\n    3:Maximum temperature:K (instant):regular_gg:heightAboveGround:level 2:fcst time 108-120:from 200402291200\n - indexing with integer key is the same as calling the message method::\n    >>> grb = grbs[2]\n    >>> print grb\n    2:Surface pressure:Pa (instant):regular_gg:surface:level 0:fcst time 120:from 200402291200\n - modify the values associated with existing keys (either via attribute or\n   dictionary access)::\n    >>> grb['forecast_time'] = 240\n    >>> grb.dataDate = 20100101\n - get the binary string associated with the coded message::\n    >>> msg = grb.tostring()\n - write the modified message to a new GRIB file::\n    >>> grbout = open('test.grb','wb')\n    >>> grbout.write(msg)\n    >>> grbout.close()\n    >>> grbs = pygrib.open('test.grb')\n    >>> grbs.next()\n    >>> print grb\n    1:Surface pressure:Pa (instant):regular_gg:surface:level 0:fcst time 240:from 201001011200\n\nDocumentation\n=============\n\n - see below for the full python API documentation.\n  \nChangelog\n=========\n\n - see U{Changelog<http://pygrib.googlecode.com/svn/trunk/Changelog>} file.\n\n@author: Jeffrey Whitaker.\n\n@contact: U{Jeff Whitaker<mailto:jeffrey.s.whitaker@noaa.gov>}\n\n@version: 1.7.1\n\n@copyright: copyright 2010 by Jeffrey Whitaker.\n\n@license: Permission to use, copy, modify, and distribute this software and its\ndocumentation for any purpose and without fee is hereby granted,\nprovided that the above copyright notice appear in all copies and that\nboth that copyright notice and this permission notice appear in\nsupporting documentation.\nTHE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,\nINCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO\nEVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, INDIRECT OR\nCONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF\nUSE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR\nOTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR\nPERFORMANCE OF THIS SOFTWARE.";
+static char __pyx_k_66[] = "1.7.1";
 static char __pyx_k__C[] = "C";
 static char __pyx_k__F[] = "F";
 static char __pyx_k__a[] = "a";
@@ -17180,7 +17180,7 @@ PyMODINIT_FUNC PyInit_pygrib(void)
  * PERFORMANCE OF THIS SOFTWARE."""
  * __test__ = None             # <<<<<<<<<<<<<<
  * del __test__ # hack so epydoc doesn't show __test__
- * __version__ = '1.7'
+ * __version__ = '1.7.1'
  */
   if (PyObject_SetAttr(__pyx_m, __pyx_n_s____test__, Py_None) < 0) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 143; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
 
@@ -17188,7 +17188,7 @@ PyMODINIT_FUNC PyInit_pygrib(void)
  * PERFORMANCE OF THIS SOFTWARE."""
  * __test__ = None
  * del __test__ # hack so epydoc doesn't show __test__             # <<<<<<<<<<<<<<
- * __version__ = '1.7'
+ * __version__ = '1.7.1'
  * 
  */
   if (__Pyx_DelAttrString(__pyx_m, "__test__") < 0) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 144; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
@@ -17196,14 +17196,14 @@ PyMODINIT_FUNC PyInit_pygrib(void)
   /* "/Users/jsw/python/pygrib/pygrib.pyx":145
  * __test__ = None
  * del __test__ # hack so epydoc doesn't show __test__
- * __version__ = '1.7'             # <<<<<<<<<<<<<<
+ * __version__ = '1.7.1'             # <<<<<<<<<<<<<<
  * 
  * import numpy as np
  */
   if (PyObject_SetAttr(__pyx_m, __pyx_n_s____version__, ((PyObject *)__pyx_kp_s_66)) < 0) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 145; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
 
   /* "/Users/jsw/python/pygrib/pygrib.pyx":147
- * __version__ = '1.7'
+ * __version__ = '1.7.1'
  * 
  * import numpy as np             # <<<<<<<<<<<<<<
  * from numpy import ma
