@@ -1,5 +1,6 @@
 version 1.7.1 - svn revision 256
 ================================
+* require python 2.5 (since list comprehensions are used).
 * reduced verbosity of grib_list.
 * made grib_list more robust (prints "NOT FOUND" when there is an error
   reading the value for a key).
